src/objects/t_metric__c.object
<CustomObject>
    <fields>
        <fullName>fs_dataType__c</fullName>
        <label>Data Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_data__c</fullName>
        <label>Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_dsc__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>System Metric</label>
    <nameField>
        <label>MBO Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Metrics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>